k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: final-app-deployment
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: final-app 
  template:
    metadata:
      labels:
        app: final-app
    spec:
      containers:
        - name: final-app-container
          image: yousofkhaled/eyego-node-app:latest
          ports:
            - containerPort: 5000
