k8s/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: final-app-service
  namespace: ivolve
spec:
  type: ClusterIP
  selector:
    app: final-app
  ports:
    - port: 2000
      targetPort: 5000
