k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: final-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ivolve  
spec:
  ingressClassName: nginx
  rules:
    - host: ing-461984301.us-east-1.elb.amazonaws.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: final-app-service
              port:
                number: 2000
